apps/model-inference/base/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qwen3-8b-disagg-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.x-k8s.io
          kind: InferencePool
          name: qwen3-8b-disagg-pool
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 300s
